syntax = "proto3";

package order;

// Order Service Definition
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);
  rpc GetOrderStatus(GetOrderStatusRequest) returns (OrderStatusResponse);
  
  // Internal saga operations
  rpc ConfirmOrder(ConfirmOrderRequest) returns (OrderResponse);
  rpc FailOrder(FailOrderRequest) returns (OrderResponse);
}

// Order Status Enum
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_PROCESSING = 3;
  ORDER_STATUS_SHIPPED = 4;
  ORDER_STATUS_DELIVERED = 5;
  ORDER_STATUS_CANCELLED = 6;
  ORDER_STATUS_FAILED = 7;
}

// ============================================
// Request Messages
// ============================================

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItemInput items = 2;
  string shipping_address = 3;
  optional string notes = 4;
}

message OrderItemInput {
  string product_id = 1;
  int32 quantity = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message ListOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
  optional OrderStatus status = 4;
}

message CancelOrderRequest {
  string order_id = 1;
  string reason = 2;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message ConfirmOrderRequest {
  string order_id = 1;
}

message FailOrderRequest {
  string order_id = 1;
  string reason = 2;
}

// ============================================
// Response Messages
// ============================================

message OrderResponse {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  string shipping_address = 6;
  string notes = 7;
  string created_at = 8;
  string updated_at = 9;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message OrderStatusResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string status_message = 3;
  string updated_at = 4;
}

